--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_ENV=production
 PORT=5000
 API_URL= /api/v1
-JWT_KEY: mynameiskhalidali
+JWT_KEY=secret
 URL=mongodb+srv://fuckubby:fuckubby@cluster0.7bpzk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority   
